# tallax

./: .gitignore  AGENTS.md  ARBITRARY_SHAPES_ANALYSIS.md  README.md  SCALAR_ARRAYS_CUSTOM_PARTITIONING.md  SEGFAULT_REPORT.md  TEST_REPORT.md  TOP1_BRANCH_REVIEW.md  benchmark_bitonic_topk.py  bitonic_topk.py  bug_analysis_top1_branch.md  fixed_tpu_sampling_script.py  minimal_pallas_segfault.py  minimal_pallas_with_scratch.py  minimal_segfault_test.py  pyproject.toml  sort.py  standalone_sort_benchmark.py  test_bitonic_topk_arbitrary_shapes.py  test_debug_pallas.py  test_exact_mirror.py  test_fix.py  test_jax_lax_sort.py  test_overspill.py  test_pallas_view.py  test_sort_dtypes.py  test_tallax_internals.py  test_tax_sort_direct.py  test_top1_features.py  top_k.py  top_k_runtime_theory.py  utils.py
benchmarks/: benchmark_bitonic_top_k.py  benchmark_bitonic_topk.py  benchmark_utils.py  cumsum_benchmark.py  sort_benchmark.py  top_k_benchmark.py
examples/: README.md  axis_index_custom_partitioning.py  scalar_partitioning_demo.py  scalar_partitioning_simple.py
tallax/: __init__.py  cumsum.py  gather.py  sampling.py  sort.py  tax.py  test_utils.py  top_k.py  tumpy.py  utils.py
tests/: benchmark_utils.py  bitonic_top_k_test.py  bitonic_topk_test.py  cumsum_test.py  fused_sampling_test.py  gather_test.py  reproduce_bitonic_topk.py  reproduce_sparse_random.py  sampling_test.py  sort_test.py  sparse_random_test.py  take_along_axis_test.py  temp_check.py  test_cumsum.py  test_cumsum_benchmark.py  test_gather.py  test_sort.py  test_sort_benchmark.py  test_sort_correctness.py  (+8 more)
(+21 files in other folders)
